--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4|^8.0",
+        "php": "^7.4|^8.0",
         "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^10.0.0"
     },
